# fic-beacon

./: .env.example  .gitignore  Architecture.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  rebuild.sh  requirements.txt
alembic/: env.py
alembic/versions/: 20260629_1717_bbd852692152_baseline_schema.py  20260629_1718_ffdf857a9989_add_config_extra_boost_multiplier.py  20260629_1742_cba964cd14a1_channel_budget_int_to_float.py
app/: config.py  database.py  main.py  models.py  scheduler.py  state.py  version.py
app/calibre/: adapter.py  genre.py  status.py
app/epub/: chapterizer.py
app/feed/: builder.py
app/fetch/: client.py
app/ongoing/: feed_url.py  opml.py  poller.py
app/planner/: planner.py
app/routers/: admin.py  feed.py  feedback.py  media.py  ongoing.py  reader.py  websub.py
app/static/: robots.txt
app/templates/: base.html
app/templates/admin/: channels.html  config.html  import.html  index.html  library.html  ongoing.html
app/websub/: publisher.py
fetcher/: Dockerfile  app.py  personal.ini.example
tests/: conftest.py  make_epub.py  test_calibre_adapter.py  test_channels.py  test_chapterizer.py  test_feed_builder.py  test_genre.py  test_library_add.py  test_media.py  test_misc.py  test_ongoing.py  test_planner.py  test_status.py  test_websub.py
