[project]
name = "fic-beacon"
version = "0.6.0"
description = "Re-serializes Calibre backlog EPUBs into a paced RSS feed"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "feedgen>=1.0.0",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "httpx>=0.28.0",
  "feedparser>=6.0.11",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
